2022-11-16T16:20:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3481142804 # 619
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 249 452 / 254 460
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 255 461
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-02] / [2022-11-16]

2022-11-16T01:19:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3475554928 # 617
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 248 450 / 254 458
* notice: next accum: outdated-unq outdated-all / unq all: 249 452 / 254 460
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-01] / [2022-11-15]

2022-11-15T08:20:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3468655275 # 615
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 248 450 / 253 458
* notice: next accum: outdated-unq outdated-all / unq all: 248 450 / 254 458
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]

2022-11-15T01:19:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466599222 # 614
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 247 447 / 252 453
* notice: next accum: outdated-unq outdated-all / unq all: 248 450 / 253 458
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2022-10-31] / [2022-11-14]

2022-11-14T16:22:58Z: