@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-16T16:20:59Z",
+  "timestamp" : "2022-11-17T01:19:41Z",
   "count_outdated" : 453,
   "uniques_outdated" : 250,
-  "count" : 461,
+  "count" : 462,
   "uniques" : 255,
   "clones" : [
     {
@@ -28,8 +28,8 @@
     },
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
