@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 2,
   "clones": [
     {
@@ -19,7 +19,7 @@
     },
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
