@@ -1,3 +1,11 @@
+2022-11-17T01:19:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3484522474 # 620
+* notice: last 14d: unq all: 2 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 255 461
+* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 255 462
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-16T16:20:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3481142804 # 619
 * notice: last 14d: unq all: 2 8
